fix(item-divider): fabs have higher z-index than item-dividers
fixes #8489

--- a/src/themes/ionic.globals.scss
+++ b/src/themes/ionic.globals.scss
@@ -32,7 +32,7 @@ $z-index-menu-backdrop:          79;
 $z-index-overlay:                1000;
 $z-index-click-block:            9999;
 
-$z-index-fixed-content:          100;
+$z-index-fixed-content:          999;
 $z-index-scroll-content:         1;
 $z-index-refresher:              0;
 
@@ -44,3 +44,4 @@ $z-index-backdrop:               2;
 $z-index-overlay-wrapper:        10;
 
 $z-index-item-options:           1;
+$z-index-item-divider:          100;
